--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http:http://34.229.222.70:8081/repository/tesla-snapshot/</url>
+	      <urlhttp://34.229.222.70:8081/repository/snap-snapshot/></url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
