--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://34.229.222.70:8081/repository/prod-release/</url>
+	      <url>http://34.229.222.70:8081/repository/prod-release/ </url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <urlhttp://34.229.222.70:8081/repository/snap-snapshot/></url>
+	      <urlhttp://34.229.222.70:8081/repository/snap-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
